# django-npm-mjs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.py
.github/workflows/: lint.yml  test.yml
npm_mjs/: .babelrc  json5_parser.py  package.json  package.json5  paths.py  signals.py  storage.py  tools.py
npm_mjs/management/commands/: collectstatic.py  create_package_json.py  makemessages.py  npm_install.py  rspack.config.template.js  transpile.py  webpack.config.template  webpack.config.template.js
npm_mjs/templates/npm_mjs/: static_urls_js.html  transpile_vars.html
npm_mjs/templatetags/: transpile.py
npm_mjs/tests/: __init__.py  test_json5_parser.py
